<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginBottom="@dimen/_10sdp"
        android:textSize="@dimen/_20ssp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/register_full_name_Et"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:inputType="textEmailAddress" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/register_email_et"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/register_pass_et"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register" />


</androidx.appcompat.widget.LinearLayoutCompat>